fix: z-index search & navi

--- a/themes/fiptheme/assets/sass/navigation.scss
+++ b/themes/fiptheme/assets/sass/navigation.scss
@@ -161,7 +161,7 @@
     right: 0;
     width: 60%;
     height: 100%;
-    z-index: 2;
+    z-index: 3;
     background-color: white;
     padding: 0 1rem;
     overflow-y: scroll;
