--- a/themes/fiptheme/assets/sass/stage.scss
+++ b/themes/fiptheme/assets/sass/stage.scss
@@ -22,7 +22,7 @@
     left: 50%;
     transform: translate(-50%);
     display: flex;
-    z-index: 3;
+    z-index: 2;
 
     @include media-breakpoint-up(md) {
         width: 60%;
